@@ -1,3 +1,9 @@
+2024-11-27T12:28:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12050300028 # 980
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-11-27
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3334 / 0 3336 / +0 +2
+
 2024-11-27T01:09:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12041821205 # 979
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-11-27
